// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkTableCell should render correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="bpk-table__cell"
        >
          Tabular data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableCell should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="bpk-table__cell test"
        >
          Tabular data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableCell should render correctly with wrap enabled 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="bpk-table__cell bpk-table__cell--wrap"
        >
          Tabular data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
